--- a/accounts/templates/auth/login.html
+++ b/accounts/templates/auth/login.html
@@ -75,7 +75,7 @@
 
                             <div class="text-center">
                                 <p class="mb-0">Don't have an account? 
-                                    <a href="/auth/register" class="register-link">Create Account</a>
+                                    <a href="/register" class="register-link">Create Account</a>
                                 </p>
                             </div>
                         </form>
